--- a/postgres.yml
+++ b/postgres.yml
@@ -5,16 +5,15 @@ services:
     restart: unless-stopped
     image: 'bitnami/postgresql:latest'
     volumes:
-      - ~/database/postgres:/var/lib/postgresql/data
+      - ~/database/postgres:/bitnami/postgresql
     ports:
       - 5432:5432
     environment:
-      - POSTGRESQL_DATABASE=gobarber
+      - POSTGRESQL_DATABASE=stocks
       #- POSTGRESQL_USERNAME=my_user
-      - POSTGRESQL_PASSWORD=password
+      - POSTGRESQL_PASSWORD=0h6peko62d
 
-      
 networks:
   default:
     external:
-      name: database-network      
+      name: vm1
